--- a/NLW/index.html
+++ b/NLW/index.html
@@ -28,7 +28,7 @@
                <h1>Seu marketplace de coleta de resíduos</h1>
     
                <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
-               <a href="#"><span></span> pontos de coleta</a>
+               <a href="#"><span></span><strong>Pesquisa pontos de coleta</strong> </a>
 
            </main>
            
