--- a/NLW/index.html
+++ b/NLW/index.html
@@ -9,6 +9,9 @@
     
 
     <link rel="stylesheet" href="Styles/main.css">
+    <link rel="stylesheet" href="Styles/home.css">
+    <link rel="stylesheet" href="Styles/resposive.css">
+
 </head>
 <body>
     <div id="page-home">
@@ -16,7 +19,7 @@
         <div class="content">
 
            <header>
-               <img src="extras-aula-1/icones/logo.svg" alt="Logomarca">
+               <img src="icones/logo.svg" alt="Logomarca">
                <a href="http://google.com">
                     <span></span>
                     Cadastre um ponto de coleta
