--- a/NLW/create-point.html
+++ b/NLW/create-point.html
@@ -18,7 +18,7 @@
 
         <header>
             <img src="icones/logo.svg" alt="Logomarca">
-            <a href="http://google.com">
+            <a href="index.html">
                 <span></span>
                 Voltar para home
             </a>
