--- a/NLW/create-point.html
+++ b/NLW/create-point.html
@@ -32,12 +32,12 @@
                     <h2>Dados da entidade</h2>
                 </legend>
 
-                <div class="fild">
+                <div class="field">
                     <label for="name">nome da entidade</label>
                     <input type="text" name="name">
                 </div>
 
-                <div class="fild-group">
+                <div class="field-group">
                     <div class="field">
                         <label for="address">Endereço</label>
                         <input type="text" name="address">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
 
-                <div class="fild-group">
+                <div class="field-group">
                     
                     <div class="field">
                         <label for="state">Estado</label>
