--- a/NLW/index.html
+++ b/NLW/index.html
@@ -20,7 +20,7 @@
 
            <header>
                <img src="icones/logo.svg" alt="Logomarca">
-               <a href="http://google.com">
+               <a href="create-point.html">
                     <span></span>
                     Cadastre um ponto de coleta
                 </a>
