--- a/NLW/create-point.html
+++ b/NLW/create-point.html
@@ -56,6 +56,9 @@
                         <select name="uf">
                             <option value="">Selecione um Estado</option>
                         </select>
+
+                        <input type="hidden" name="state">
+
                     </div>
                     
                     <div class="field">
@@ -76,5 +79,6 @@
         </form>
                    
     </div>
+    <script src="/NLW/scripts/create-point.js"></script>
 </body>
 </html>
