--- a/NLW/create-point.html
+++ b/NLW/create-point.html
@@ -76,7 +76,7 @@
                 <legend>
                     <h1>Itens de Coleta</h1>
                     <div class="items-grid">
-                        <li data-id="1" class="selected">
+                        <li data-id="1">
                             <img src="/NLW/icones/lampadas.svg" alt="Lampadas"><span>Lampada</span>
                         </li>
                         <li data-id="2">
@@ -95,6 +95,9 @@
                             <img src="/NLW/icones/oleo.svg" alt="Oleo de cozinha"><span>Oléo de cozinha</span>
                         </li>
                     </div>
+
+                    <input type="hidden" name="items">
+
                 </legend>
             </fieldset>
 
