--- a/NLW/index.html
+++ b/NLW/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="Styles/main.css">
     <link rel="stylesheet" href="Styles/home.css">
+    <link rel="stylesheet" href="Styles/model.css">
     <link rel="stylesheet" href="Styles/resposive.css">
 
 </head>
@@ -38,5 +39,24 @@
     
         </div>
     </div>
+
+    <div id="modal">
+        <div class="content">
+            <div class="header">
+                <h1>Pontos de coleta</h1>
+                <a href = "">Fechar</a>
+            </div>
+            <form action="">
+                <label for="search">Cidade</label>
+                <div class="search field">
+                    <input type="text" name="search" placeholder="Pesquise por cidade">
+                    <button>
+                        <img src="icones/search.svg" alt="Buscar">
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
 </body>
 </html>
