--- a/NLW/search-results.html
+++ b/NLW/search-results.html
@@ -31,7 +31,7 @@
             </h4>
 
             <div class="cards">
-                <div id="card">
+                <div class="card">
                     <img src="https://images.unsplash.com/photo-1481761289552-381112059e05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=861&q=80" alt="Colectoria">
                     <h1>Colectoria</h1>
                     <h3>Residuos Eletrônicos, Lâmpadas</h3>
@@ -41,7 +41,7 @@
                         Número 260
                     </p>
                 </div>
-                <div id="card">
+                <div class="card">
                     <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=801&q=80" alt="Papersider">
                     <h1>Papersider</h1>
                     <h3>Papeis e Papelão</h3>
